Added creation of packages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,13 @@
 PROJECT (libsolv)
 
-CMAKE_MINIMUM_REQUIRED (VERSION 2.8.5)
+CMAKE_MINIMUM_REQUIRED (VERSION 3.10.2)
 
 OPTION (ENABLE_STATIC "Build a static version of the libraries?" OFF)
 OPTION (DISABLE_SHARED "Do not build a shared version of the libraries?" OFF)
 
 OPTION (ENABLE_PERL "Build the perl bindings?" OFF)
 OPTION (ENABLE_PYTHON "Build the python bindings?" OFF)
+OPTION (ENABLE_PYTHON3 "Build the python3 bindings?" OFF)
 OPTION (ENABLE_RUBY "Build the ruby bindings?" OFF)
 OPTION (ENABLE_TCL "Build the Tcl bindings?" OFF)
 
@@ -53,9 +54,17 @@ ENDIF (NOT PKGCONFIG_INSTALL_DIR)
 # CONFIGURATION                                                    #
 ####################################################################
 
+include(CPackComponent)
+SET (PACKAGE "libsolv")
+
 # where to look first for cmake modules, before ${CMAKE_ROOT}/Modules/ is checked
-SET (CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/modules)
-INSTALL( FILES ${CMAKE_MODULE_PATH}/FindLibSolv.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules )
+SET (OUR_MODULES_DIR "${CMAKE_SOURCE_DIR}/cmake/modules")
+SET (CMAKE_MODULE_PATH "${OUR_MODULES_DIR}")
+IF (${CMAKE_VERSION} VERSION_LESS "3.12")
+  SET (CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_SOURCE_DIR}/cmake/FindPythonFromGit")
+ENDIF ()
+
+INSTALL( FILES "${OUR_MODULES_DIR}/FindLibSolv.cmake" DESTINATION "${CMAKE_INSTALL_PREFIX}/share/cmake/Modules" COMPONENT "libsolv-dev")
 
 INCLUDE (${CMAKE_SOURCE_DIR}/VERSION.cmake)
 
@@ -86,6 +95,7 @@ SET (ENABLE_RPMMD ON)
 SET (ENABLE_SUSEREPO ON)
 SET (ENABLE_HELIXREPO ON)
 SET (ENABLE_LINKED_PKGS ON)
+SET (ENABLE_COMPLEX_DEPS ON)
 SET (have_system ${have_system}x)
 ENDIF (SUSE)
 
@@ -166,8 +176,8 @@ INCLUDE_DIRECTORIES (${ZLIB_INCLUDE_DIRS})
 ENDIF (ENABLE_ZLIB_COMPRESSION)
 
 IF (ENABLE_LZMA_COMPRESSION)
-FIND_PACKAGE (LZMA REQUIRED)
-INCLUDE_DIRECTORIES (${LZMA_INCLUDE_DIR})
+FIND_PACKAGE (LibLZMA REQUIRED)
+INCLUDE_DIRECTORIES (${LIBLZMA_INCLUDE_DIRS})
 ENDIF (ENABLE_LZMA_COMPRESSION)
 
 IF (ENABLE_BZIP2_COMPRESSION)
@@ -303,19 +313,33 @@ FOREACH (VAR
   ENDIF (${VAR})
 ENDFOREACH (VAR)
 
-SET (PACKAGE "libsolv")
 SET (VERSION "${LIBSOLV_MAJOR}.${LIBSOLV_MINOR}.${LIBSOLV_PATCH}")
 
 ADD_DEFINITIONS (-D_FILE_OFFSET_BITS=64)
 CONFIGURE_FILE (src/solvversion.h.in src/solvversion.h)
 
-SET (CPACK_PACKAGE_DESCRIPTION_SUMMARY "Package dependency solver library")
+macro(pass_through_cpack_vars)
+  get_cmake_property(cpackVarsToPassthrough VARIABLES)
+  foreach(varName ${cpackVarsToPassthrough})
+    if(varName MATCHES "^CPACK_DEBIAN_")
+      message(STATUS "${varName}")
+      set("${varName}" "${${varName}}" PARENT_SCOPE)
+    endif()
+  endforeach()
+endmacro()
+
 SET (CPACK_PACKAGE_VENDOR "SUSE")
 SET (CPACK_PACKAGE_VERSION_MAJOR ${LIBSOLV_MAJOR})
 SET (CPACK_PACKAGE_VERSION_MINOR ${LIBSOLV_MINOR})
 SET (CPACK_PACKAGE_VERSION_PATCH ${LIBSOLV_PATCH})
-SET (CPACK_GENERATOR "TBZ2")
+
+SET (CPACK_COMPONENT_LIBSOLV_DESCRIPTION_SUMMARY "Package dependency solver library")
+
+if (NOT DEFINED CPACK_GENERATOR)
+  SET (CPACK_GENERATOR "TBZ2")
+endif ()
 SET (CPACK_SOURCE_GENERATOR "TBZ2")
+
 SET (CPACK_SOURCE_PACKAGE_FILE_NAME "${PACKAGE}-${VERSION}")
 SET (CPACK_SOURCE_TOPLEVEL_TAG "Linux-Source:")
 SET (CPACK_TOPLEVEL_TAG "Linux-Source:")
@@ -359,7 +383,6 @@ SET (CPACK_SOURCE_IGNORE_FILES
 "libsolv.spec$"
 )
 
-INCLUDE(CPack)
 
 ####################################################################
 # INCLUDES                                                         #
@@ -396,7 +419,7 @@ IF (ENABLE_ZLIB_COMPRESSION)
 SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${ZLIB_LIBRARY})
 ENDIF (ENABLE_ZLIB_COMPRESSION)
 IF (ENABLE_LZMA_COMPRESSION)
-SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${LZMA_LIBRARY})
+SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${LIBLZMA_LIBRARIES})
 ENDIF (ENABLE_LZMA_COMPRESSION)
 IF (ENABLE_BZIP2_COMPRESSION)
 SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${BZIP2_LIBRARIES})
@@ -423,6 +446,10 @@ ADD_SUBDIRECTORY (tools)
 IF (ENABLE_PERL OR ENABLE_PYTHON OR ENABLE_RUBY OR ENABLE_TCL)
     ADD_SUBDIRECTORY (bindings)
 ENDIF (ENABLE_PERL OR ENABLE_PYTHON OR ENABLE_RUBY OR ENABLE_TCL)
+
+set(CPACK_RPM_COMPONENT_INSTALL ON)
+set(CPACK_DEB_COMPONENT_INSTALL ON)
+
 ADD_SUBDIRECTORY (examples)
 ADD_SUBDIRECTORY (doc)
 
@@ -440,9 +467,9 @@ ENDMACRO (SPECFILE)
 MACRO (PCFILE)
   MESSAGE (STATUS "Writing pkg-config files...")
   CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/libsolv.pc.in ${CMAKE_BINARY_DIR}/libsolv.pc @ONLY)
-  INSTALL( FILES ${CMAKE_BINARY_DIR}/libsolv.pc DESTINATION ${PKGCONFIG_INSTALL_DIR} )
+  INSTALL( FILES ${CMAKE_BINARY_DIR}/libsolv.pc DESTINATION ${PKGCONFIG_INSTALL_DIR} COMPONENT "libsolv-dev" )
   CONFIGURE_FILE (${CMAKE_SOURCE_DIR}/libsolvext.pc.in ${CMAKE_BINARY_DIR}/libsolvext.pc @ONLY)
-  INSTALL( FILES ${CMAKE_BINARY_DIR}/libsolvext.pc DESTINATION ${PKGCONFIG_INSTALL_DIR} )
+  INSTALL( FILES ${CMAKE_BINARY_DIR}/libsolvext.pc DESTINATION ${PKGCONFIG_INSTALL_DIR} COMPONENT "libsolv-dev" )
 ENDMACRO (PCFILE)
 
 SPECFILE ()
@@ -467,3 +494,5 @@ ADD_CUSTOM_TARGET (srcpackage_local
 
 ENABLE_TESTING()
 ADD_SUBDIRECTORY (test)
+
+INCLUDE(CPack)
