--- a/bindings/perl/CMakeLists.txt
+++ b/bindings/perl/CMakeLists.txt
@@ -33,5 +33,21 @@ SET_TARGET_PROPERTIES (bindings_perl PROPERTIES PREFIX "" OUTPUT_NAME "solv")
 SET_TARGET_PROPERTIES (bindings_perl PROPERTIES LINK_FLAGS "${PERL_CCLDFLAGS}")
 TARGET_LINK_LIBRARIES (bindings_perl libsolvext libsolv ${SYSTEM_LIBRARIES})
 
-INSTALL (TARGETS bindings_perl LIBRARY DESTINATION ${PERL_INSTALL_DIR})
-INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/solv.pm DESTINATION ${PERL_INSTALL_DIR})
+cpack_add_component("perl"
+	DEPENDS "${PACKAGE}"
+)
+set("CPACK_DEBIAN_PERL_PACKAGE_NAME" "perl-${PACKAGE}")
+
+INSTALL (TARGETS bindings_perl
+    LIBRARY DESTINATION ${PERL_INSTALL_DIR} COMPONENT "perl"
+)
+INSTALL (FILES ${CMAKE_CURRENT_BINARY_DIR}/solv.pm DESTINATION ${PERL_INSTALL_DIR} COMPONENT "perl")
+
+
+STRING (REPLACE "." ";" PERL_VERSION_PARSED "${PERL_VERSION_STRING}")
+LIST (GET PERL_VERSION_PARSED 0 PERL_VERSION_MAJOR)
+LIST (GET PERL_VERSION_PARSED 1 PERL_VERSION_MINOR)
+LIST (GET PERL_VERSION_PARSED 2 PERL_VERSION_PATCH)
+
+set("CPACK_DEBIAN_PERL_PACKAGE_DEPENDS" "perlapi-${PERL_VERSION_MAJOR}.${PERL_VERSION_MINOR}.${PERL_VERSION_PATCH}, perl (>=${PERL_VERSION_STRING}~), ${CPACK_DEBIAN_LIBSOLV_PACKAGE_NAME}")
+pass_through_cpack_vars()
