--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -164,12 +164,41 @@ ENDIF ()
 SET_TARGET_PROPERTIES(libsolvext PROPERTIES OUTPUT_NAME "solvext")
 SET_TARGET_PROPERTIES(libsolvext PROPERTIES SOVERSION ${LIBSOLVEXT_SOVERSION})
 
-INSTALL (FILES ${libsolvext_HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/solv")
-INSTALL (TARGETS libsolvext LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+set(component_main_name "${PACKAGE}ext")
+cpack_add_component("${component_main_name}"
+	DEPENDS "libsolv"
+)
+set("CPACK_DEBIAN_LIBSOLVEXT_PACKAGE_NAME" "${component_main_name}${LIBSOLV_MAJOR}")
+
+set(component_dev_name "${component_main_name}-dev")
+cpack_add_component("${component_dev_name}"
+	DEPENDS "${component_main_name}"
+)
+set("CPACK_DEBIAN_LIBSOLVEXT-DEV_PACKAGE_NAME" "${CPACK_DEBIAN_LIBSOLVEXT_PACKAGE_NAME}-dev")
+
+INSTALL (FILES ${libsolvext_HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/solv" COMPONENT "${component_dev_name}")
+INSTALL (TARGETS libsolvext
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    COMPONENT "${component_main_name}"
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    COMPONENT "${component_dev_name}"
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    COMPONENT "${component_main_name}"
+)
 
 IF (ENABLE_STATIC AND NOT DISABLE_SHARED)
 ADD_LIBRARY (libsolvext_static STATIC ${libsolvext_SRCS})
 SET_TARGET_PROPERTIES(libsolvext_static PROPERTIES OUTPUT_NAME "solvext")
 SET_TARGET_PROPERTIES(libsolvext_static PROPERTIES SOVERSION ${LIBSOLVEXT_SOVERSION})
-INSTALL (TARGETS libsolvext_static LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+INSTALL (TARGETS libsolvext_static
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    COMPONENT "${component_name}"
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    COMPONENT "${component_dev_name}"
+)
 ENDIF (ENABLE_STATIC AND NOT DISABLE_SHARED)
+
+SET ("CPACK_DEBIAN_LIBSOLVEXT_PACKAGE_DEPENDS" "${CPACK_DEBIAN_LIBSOLV_PACKAGE_NAME}")
+SET ("CPACK_DEBIAN_LIBSOLVEXT-DEV_PACKAGE_DEPENDS" "${CPACK_DEBIAN_LIBSOLV-DEV_PACKAGE_NAME}, ${CPACK_DEBIAN_LIBSOLVEXT_PACKAGE_NAME}")
+
+pass_through_cpack_vars()
