--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -56,12 +56,63 @@ ENDIF (DISABLE_SHARED)
 SET_TARGET_PROPERTIES(libsolv PROPERTIES OUTPUT_NAME "solv")
 SET_TARGET_PROPERTIES(libsolv PROPERTIES SOVERSION ${LIBSOLV_SOVERSION})
 
-INSTALL (FILES ${libsolv_HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/solv")
-INSTALL (TARGETS libsolv LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
+cpack_add_component("${PACKAGE}")
+cpack_add_component("${PACKAGE}-dev"
+    DEPENDS "${PACKAGE}"
+)
+SET (CPACK_DEBIAN_LIBSOLV_PACKAGE_NAME "${PACKAGE}${LIBSOLV_MAJOR}")
+SET ("CPACK_DEBIAN_LIBSOLV-DEV_PACKAGE_NAME" "${CPACK_DEBIAN_LIBSOLV_PACKAGE_NAME}-dev")
+SET ("CPACK_DEBIAN_LIBSOLV-DEV_PACKAGE_DEPENDS" "${CPACK_DEBIAN_LIBSOLV_PACKAGE_NAME}")
+
+SET (CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "libc6")
+
+IF (ENABLE_RPMDB_LIBRPM OR ENABLE_RPMDB OR ENABLE_RPMPKG_LIBRPM)
+  list(APPEND CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "librpm8 (>= 4.14.0~)")
+  list(APPEND CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "librpmio8 (>= 4.14.0~)")
+  list(APPEND CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "libdb5.3")
+ENDIF ()
+
+IF (ENABLE_LZMA_COMPRESSION)
+  list(APPEND CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "liblzma${LIBLZMA_VERSION_MAJOR} (>=${LIBLZMA_VERSION_STRING}~)")
+ENDIF ()
+
+IF (ENABLE_ZLIB_COMPRESSION)
+  LIST (APPEND CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "zlib${ZLIB_VERSION_MAJOR}g (>=${ZLIB_VERSION_STRING}~)")
+ENDIF ()
+
+IF (ENABLE_BZIP2_COMPRESSION)
+  STRING (REPLACE "." ";" BZIP2_VERSION_PARSED "${BZIP2_VERSION_STRING}")
+  LIST (GET BZIP2_VERSION_PARSED 0 BZIP2_VERSION_MAJOR)
+  LIST (APPEND CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "libbz2-${BZIP2_VERSION_MAJOR}.0 (>=${BZIP2_VERSION_STRING}~)")
+ENDIF ()
+
+IF (WITH_LIBXML2)
+  LIST(APPEND CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "libxml2 (>= ${LIBXML2_VERSION_STRING}~)")
+ELSE ()
+  LIST(APPEND CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "libexpat1") # EXPAT_VERSION_STRING is not yet exposed by FindEXPAT.cmake
+ENDIF ()
+STRING (REPLACE ";" ", " CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS "${CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS}")
+message(STATUS "${CPACK_DEBIAN_LIBSOLV_PACKAGE_DEPENDS}")
+
+INSTALL (FILES ${libsolv_HEADERS} DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/solv" COMPONENT "${PACKAGE}-dev")
+INSTALL (TARGETS libsolv
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    COMPONENT "${PACKAGE}"
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    COMPONENT "${PACKAGE}-dev"
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    COMPONENT "${PACKAGE}"
+)
 
 IF (ENABLE_STATIC AND NOT DISABLE_SHARED)
 ADD_LIBRARY (libsolv_static STATIC ${libsolv_SRCS})
 SET_TARGET_PROPERTIES(libsolv_static PROPERTIES OUTPUT_NAME "solv")
 SET_TARGET_PROPERTIES(libsolv_static PROPERTIES SOVERSION ${LIBSOLV_SOVERSION})
-INSTALL (TARGETS libsolv_static LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR} ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
+INSTALL (TARGETS libsolv_static
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    COMPONENT "${PACKAGE}"
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    COMPONENT "${PACKAGE}-dev"
+)
 ENDIF (ENABLE_STATIC AND NOT DISABLE_SHARED)
+pass_through_cpack_vars()
