Fixed discovery of LZMA libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,8 +170,8 @@ INCLUDE_DIRECTORIES (${ZLIB_INCLUDE_DIRS})
 ENDIF (ENABLE_ZLIB_COMPRESSION)
 
 IF (ENABLE_LZMA_COMPRESSION)
-FIND_PACKAGE (LZMA REQUIRED)
-INCLUDE_DIRECTORIES (${LZMA_INCLUDE_DIR})
+FIND_PACKAGE (LibLZMA REQUIRED)
+INCLUDE_DIRECTORIES (${LIBLZMA_INCLUDE_DIRS})
 ENDIF (ENABLE_LZMA_COMPRESSION)
 
 IF (ENABLE_BZIP2_COMPRESSION)
@@ -415,7 +415,7 @@ IF (ENABLE_ZLIB_COMPRESSION)
 SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${ZLIB_LIBRARY})
 ENDIF (ENABLE_ZLIB_COMPRESSION)
 IF (ENABLE_LZMA_COMPRESSION)
-SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${LZMA_LIBRARY})
+SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${LIBLZMA_LIBRARIES})
 ENDIF (ENABLE_LZMA_COMPRESSION)
 IF (ENABLE_BZIP2_COMPRESSION)
 SET (SYSTEM_LIBRARIES ${SYSTEM_LIBRARIES} ${BZIP2_LIBRARIES})
