--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -219,7 +219,7 @@ CMAKE_FLAGS="-DFEDORA=1"
 CMAKE_FLAGS="-DMAGEIA=1"
 %endif
 %if 0%{?suse_version}
-CMAKE_FLAGS="-DSUSE=1 -DENABLE_RPMDB_LIBRPM=1"
+CMAKE_FLAGS="-DSUSE=1"
 %endif
 
 cmake . $CMAKE_FLAGS \
