Move win32 suff into an extra block
Just cosmetics, no functual changes

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -49,15 +49,17 @@ ENDIF (HAVE_LINKER_VERSION_SCRIPT)
 
 IF (DISABLE_SHARED)
     ADD_LIBRARY (libsolv STATIC ${libsolv_SRCS})
-    IF (WIN32)
-        TARGET_COMPILE_DEFINITIONS(libsolv PUBLIC SOLV_STATIC_LIB)
-    ENDIF (WIN32)
 ELSE (DISABLE_SHARED)
     ADD_LIBRARY (libsolv SHARED ${libsolv_SRCS})
-    IF (WIN32)
-        TARGET_COMPILE_DEFINITIONS(libsolv PRIVATE SOLV_EXPORTS)
-    ENDIF (WIN32)
 ENDIF (DISABLE_SHARED)
+
+IF (WIN32)
+    IF (DISABLE_SHARED)
+        TARGET_COMPILE_DEFINITIONS(libsolv PUBLIC SOLV_STATIC_LIB)
+    ELSE (DISABLE_SHARED)
+        TARGET_COMPILE_DEFINITIONS(libsolv PRIVATE SOLV_EXPORTS)
+    ENDIF (DISABLE_SHARED)
+ENDIF (WIN32)
 
 SET_TARGET_PROPERTIES(libsolv PROPERTIES OUTPUT_NAME "solv")
 SET_TARGET_PROPERTIES(libsolv PROPERTIES SOVERSION ${LIBSOLV_SOVERSION})
