Fix build with rpm headers in non-standard path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -209,6 +209,12 @@ ENDIF (ENABLE_RPMDB)
 
 INCLUDE (CheckIncludeFile)
 IF (ENABLE_RPMDB OR ENABLE_RPMPKG_LIBRPM)
+  FIND_PATH (RPM_INCLUDE_DIR NAMES rpm/rpmio.h)
+  IF (RPM_INCLUDE_DIR)
+    INCLUDE_DIRECTORIES (${RPM_INCLUDE_DIR})
+    SET (CMAKE_REQUIRED_INCLUDES ${CMAKE_REQUIRED_INCLUDES} ${RPM_INCLUDE_DIR})
+  ENDIF (RPM_INCLUDE_DIR)
+
   FIND_LIBRARY (RPMDB_LIBRARY NAMES rpmdb)
 
   IF (NOT RPMDB_LIBRARY)
