--- a/src/solvversion.h.in
+++ b/src/solvversion.h.in
@@ -19,10 +19,17 @@
 #define LIBSOLV_VERSION_PATCH @LIBSOLV_PATCH@
 #define LIBSOLV_VERSION (LIBSOLV_VERSION_MAJOR * 10000 + LIBSOLV_VERSION_MINOR * 100 + LIBSOLV_VERSION_PATCH)
 
-extern const char solv_version[];
-extern int solv_version_major;
-extern int solv_version_minor;
-extern int solv_version_patch;
+#ifdef _WIN32
+// include win32/config.h for SOLV_API
+#include "win32_config.h"
+#else
+#define SOLV_API
+#endif
+
+SOLV_API extern const char solv_version[];
+SOLV_API extern int solv_version_major;
+SOLV_API extern int solv_version_minor;
+SOLV_API extern int solv_version_patch;
 
 #cmakedefine LIBSOLV_FEATURE_LINKED_PKGS
 #cmakedefine LIBSOLV_FEATURE_COMPLEX_DEPS
