--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -24,7 +24,7 @@
 %bcond_with bz2
 %bcond_with xz
 %endif
-%if 0%{?sle_version} >= 150200 || (0%{?is_opensuse} && (0%{?sle_version} >= 150000 || 0%{?suse_version} >= 1500))
+%if 0%{?is_opensuse} && (0%{?sle_version} >= 150000 || 0%{?suse_version} >= 1500)
 %bcond_without zstd
 %else
 %bcond_with zstd
