--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,12 @@ matrix:
         apt:
           packages:
           - cmake
+    - os: linux
+      arch: ppc64le
+      addons:
+        apt:
+          packages:
+          - cmake
     - os: osx
       osx_image: xcode9.4
       compiler: clang
