--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -37,12 +37,12 @@
 %endif
 # we need at least swig 1.3.40 for the bindings ($typemap support)
 %if 0%{?suse_version} != 1110
-%bcond_without python3
 %if 0%{?suse_version} < 1550
 %bcond_without python
 %else
 %bcond_with python
 %endif
+%bcond_without python3
 %bcond_without ruby
 %bcond_without perl
 %else
@@ -182,8 +182,9 @@ Group:          Development/Languages/Ruby
 %description -n ruby-solv
 Ruby bindings for libsolv.
 
+%if %{with python}
 %package -n python-solv
-%if 0%{?py_requires:1} && %{with python}
+%if 0%{?py_requires:1}
 %py_requires
 %endif
 Summary:        Python bindings for the libsolv library
@@ -191,6 +192,7 @@ Group:          Development/Languages/Python
 
 %description -n python-solv
 Python bindings for libsolv.
+%endif
 
 %package -n python3-solv
 Summary:        Python3 bindings for the libsolv library
