--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -37,12 +37,12 @@
 %endif
 # we need at least swig 1.3.40 for the bindings ($typemap support)
 %if 0%{?suse_version} != 1110
-%if 0%{?suse_version} < 1550
+%bcond_without python3
+%if 0%{?suse_version} && 0%{?suse_version} < 1540
 %bcond_without python
 %else
 %bcond_with python
 %endif
-%bcond_without python3
 %bcond_without ruby
 %bcond_without perl
 %else
