add optional support for pcre2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -51,6 +51,7 @@ IF (DISABLE_SHARED)
     ADD_LIBRARY (libsolv STATIC ${libsolv_SRCS})
 ELSE (DISABLE_SHARED)
     ADD_LIBRARY (libsolv SHARED ${libsolv_SRCS})
+    TARGET_LINK_LIBRARIES(libsolv ${SYSTEM_LIBRARIES})
 ENDIF (DISABLE_SHARED)
 
 IF (WIN32)
