Add back findutils requires for libsolv-tools
It was deleted by accident in commit 755462c2b06b079f11d431aa44c7a6146cfea424.

--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -153,6 +153,7 @@ Group:          System/Management
 Conflicts:      satsolver-tools-obsolete
 Obsoletes:      satsolver-tools < 0.18
 Provides:       satsolver-tools = 0.18
+Requires:       findutils
 
 %description tools
 libsolv is a library for solving packages and reading repositories.
