--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -288,6 +288,7 @@ ln -s repo2solv %{buildroot}/%{_bindir}/repo2solv.sh
 %{python_expand 
 pyver=%%python_version
 cmake . -U '*PYTHON*' -DENABLE_PYTHON=1 -DPYTHON_VERSION_MAJOR=${pyver%%.*} -DPYTHON_VERSION_MINOR=${pyver#*.}
+make DESTDIR=%{buildroot} -C bindings/python clean
 make DESTDIR=%{buildroot} -C bindings/python install
 }
 %python_compileall
