Bring python singlespec nearer to the documentation

--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -285,8 +285,8 @@ ln -s repo2solv %{buildroot}/%{_bindir}/repo2solv.sh
 %endif
 %endif
 %if %{with python_singlespec}
-%{python_expand 
-pyver=%%python_version
+%{python_expand #
+pyver=%{$python_version}
 cmake . -U '*PYTHON*' -DENABLE_PYTHON=1 -DPYTHON_VERSION_MAJOR=${pyver%%.*} -DPYTHON_VERSION_MINOR=${pyver#*.}
 make DESTDIR=%{buildroot} -C bindings/python clean
 make DESTDIR=%{buildroot} -C bindings/python install
