Enable MULTI_SEMANTICS in the spec file
There's no good reason not to do it.

--- a/package/libsolv.spec.in
+++ b/package/libsolv.spec.in
@@ -256,6 +256,7 @@ cmake . $CMAKE_FLAGS \
 	-DWITH_LIBXML2=1 \
 	-DENABLE_APPDATA=1 \
 	-DENABLE_COMPS=1 \
+	-DMULTI_SEMANTICS=1 \
 	%{?with_static:-DENABLE_STATIC=1} \
 	%{!?with_shared:-DDISABLE_SHARED=1} \
 	%{?with_perl:-DENABLE_PERL=1} \
